--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ h2,.white{
     color: #fff;
 }
 
+h3{
+    color: #d0d0d0 ;
+}
+
 a{
     color: #7A7C80;
     text-decoration: none;
@@ -52,6 +56,11 @@ a{
 
 .section-2 h2{
     font-size: 1.7rem;
+    margin-bottom: 10px;
+}
+
+.section-2 h3{
+    font-size: 1.4rem;
     margin-bottom: 10px;
 }
 
