--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ h2,.white{
     color: #fff;
 }
 
-h3{
-    color: #d0d0d0 ;
-}
-
 a{
     color: #7A7C80;
     text-decoration: none;
@@ -59,11 +55,6 @@ a{
     margin-bottom: 10px;
 }
 
-.section-2 h3{
-    font-size: 1.4rem;
-    margin-bottom: 10px;
-}
-
 .section-2 p{
     font-size: 1.1rem;
     padding-bottom: 10px;
@@ -78,7 +69,7 @@ a{
     width: 100px;
 }
 /* animations / utilities */
-.section-2 a:hover{
+/* .section-2 a:hover{
     font-size: 1.3rem;
     color: #fff;
     cursor: pointer;
@@ -89,7 +80,7 @@ a{
     color: #fff;
     cursor: pointer;
     transition: 0.3s;
-}
+} */
 
 .white:hover{
     position: relative;
